assets/css/style.css
* {
    margin: 0px;
    padding: 0px;
    box-sizing: border-box;
}

body {
    font-family: system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
}

.section1 {
    background-color: rgba(242,242,242,1);
}

.container {
    margin: 0px 100px;
}

nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.title a {
    text-decoration: none;
    color: black;
}

.nav-menu {
    display: flex;
    justify-content: space-evenly;
}

.nav-menu li {
    list-style: none;
    margin: 0px 20px;
}

.nav-menu li a {
    text-decoration: none;
    font-size: large;
    color: black;
}

.nav-menu li a.active {
    text-decoration: underline blue 3px;
}

.nav-menu li a:hover {
    text-decoration: underline blue 5px;
}

#nav-toggle {
    display: none;
}

.hr {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
}

.vrc {
    width: 50%;
    /* flex: 0 0 auto; */
}

.vrc-4 {
    width: 25%;
}

.vrc-8 {
    width: 75%;
}

.welcome {
    text-align: center;
}

.mt-2 {
    margin-top: 2rem;
}

.fs-2 {
    font-size: x-large;
}

img {
    vertical-align: middle;
}

.img-res {
    max-width: 100%;
    height: auto;
}

.img-res-r {
    max-height: 100%;
    width: auto;
}

.t-scale {
    transform: scale(0.75);
}

.a-s-c {
    align-self: center;
}

.col-3 {
    width: 24%;
    border: 1px solid rgba(242,242,242,1);
    padding: 5px;
}
.col-3-h {
    height: 120px;
    text-align: center;
    background-color: rgba(242,242,242,1);
}

.tags {
    margin-top: 5px;
    font-size: 12px;
    height: 20px;
}

.blue {
    border: 1px solid blue;
    background-color: blue;
    color: white;
    padding: 3px;
    border-radius: 15px;
}

.d-flex {
    display: flex;
}

.w-30 {
    width: 30%;
}

@media only screen and (max-width: 1200px) {
    .nav-menu {
        display: none;
    }

    .icon {
        display: block;
        background-color: gray;
        width: 18px;
        height: 2px;
        user-select: none;
    }

    .icon::after {
        content: "";
        background-color: gray;
        width: 18px;
        height: 2px;
        position: absolute;
        top: 9px;
        user-select: none;
    }

    .icon::before {
        content: "";
        background-color: gray;
        width: 18px;
        height: 2px;
        position: absolute;
        top: 5px;
        user-select: none;
    }

    #nav-toggle:checked ~ ul.nav-menu {
        display: block;
        position: absolute;
        left: 0px;
        top: 30px;
        background-color: blue;
        width: 100%;
        text-align: center;
    }

    .crd {
        flex-direction: column;
        align-items: center;
        text-align: center;
    }

    .crd .col-3 {
        width: 70%;
    }
}

@media only screen and (max-width: 768px) {
    .container {
        margin: 0px 30px;
    }

    .hr {
        flex-direction: column;
        align-items: center;
    }
    .vrc {
        width: 100%
    }

    .text-center {
        text-align: center;
    }

    .reverse-flex {
        flex-direction: column-reverse;
    }
}

